demo/deployment-demo-resare-com.yaml
# Source: demo.resare.com
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-resare-com
  labels:
    app: demo-resare-com
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-resare-com
  template:
    metadata:
      labels:
        app: demo-resare-com
      annotations:
        checksum/config: ac7e704258da1c1aef9c513ca3069daf50cebac76cd7a2039f997b9296dba313
    spec:
      containers:
      - name: demo-resare-com
        image: nresare/oidc-client-demo:latest
        args:
        - -c
        - /config/config.toml
        volumeMounts:
        - name: demo-resare-com-config
          mountPath: /config
      volumes:
      - name: demo-resare-com-config
        configMap:
          name: demo-resare-com-config
