demo/httproute-demo-resare-com.yaml
# Source: demo.resare.com
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-resare-com
  namespace: demo
spec:
  parentRefs:
  - name: demo-resare-com
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - demo.resare.com
  rules:
  - backendRefs:
    - name: demo-resare-com
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
